fix: dark mode initialization

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,7 @@
 }
 
 :root {
+  color-scheme: light dark;
   --html-font-size: #{$html-font-size};
   --html-line-height: #{$html-line-height};
   --html-line-height: #{$html-line-height};
